--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -40,10 +40,11 @@
 .card-title h3 {
     font-family: var(--sans-primary);
     color: var(--primary-font);
-    font-size: 28px;
+    font-size: 25px;
     font-weight: 450;
     margin-left: 20px;
     margin-right: 20px;
+    line-height: 100%;
 }
 
 .card-title h4 {
@@ -53,6 +54,7 @@
     font-size: 18px;
     margin-left: 20px;
     margin-right: 20px;
+    line-height: 100%;
 }
 
 .card-body {
